  - Stuff is exportable now
1.02 Jul 7, 2006
  - Added test to watch CORE/keywords.h for new stuff
  - Added -x and state to @Functions.
1.03 Aug 17, 2006
  - Separated non-functions in @Functions to @Barewords
  - Used qw() lists
1.04 Aug 17, 2006
  - Fixed syntax bugx in 1.03
1.05 Nov 24, 2006
  - Added UNITCHECK
1.07 Feb 14, 2007
  - Added EQ GE GT NE LE LT for 5.6.
1.08
  - Removed useless author tests
1.09
  - 856e84486be2089095a27b18f1344eca29a9ff50 Update administrivia in docs
  - b41ee8b135c9d2e0e7eda38dc17f3327f60f1cda $\ was missing from @Scalars.
  - a64e7f604687eda699fe778bcb070f3e715741b0 @Functions missing from @Symbols
  - bb14cdd3b3e5223fbb904cfbbe87fbcb5f6d8db2 Fix use B::Keywords qw(:all);
1.10
  - Fix typo in SYNOPSIS
1.11 rafl
  - Add new keywords for 5.16, __SUB__ and evalbytes.
1.12 rurban
  - Add new keyword fc (Unicode casefolding) for 5.16 added with commit 838f2281
  - added diag before each big t/11keywords.t loop
1.13 rurban
  - removed diag before each big t/11keywords.t loop
  - added suggested keywords from RT #62382: 
     *_ and DATA to @FileHandles (the deprecated lowercase: stdin, stdout, stderr not),
    import unimport to @Functions,
    BINMODE CLEAR CLEARERR CLONE CLONE_SKIP CLOSE DELETE EOF
    ERROR EXISTS EXTEND FDOPEN FETCH FETCHSIZE FILENO FILL FIRSTKEY FLUSH
    GETC NEXTKEY OPEN POP POPPED PRINT PRINTF PUSH PUSHED READ READLINE
    SCALAR SEEK SETLINEBUF SHIFT SPLICE STORE STORESIZE SYSOPEN TELL
    TIEARRAY TIEHANDLE TIEHASH TIESCALAR UNREAD UNSHIFT UNTIE UTF8 WRITE to @TieIOMethods,
    can isa DOES VERSION to @UNIVERSALMethods,
    @EXPORT @EXPORT_OK @EXPORT_FAIL
    @EXPORT_TAGS _push_tags _rebuild_cache as_heavy export export_fail
    export_fail_in export_ok_tags export_tags export_to_level heavy_export
    heavy_export_ok_tags heavy_export_tags heavy_export_to_level
    heavy_require_version require_version  to @ExporterSymbols (Zsbán Ambrus)
  - Moved exp from @Barewords to @Functions